joiParser.py
# Generated from joi.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class joiParser ( Parser ):

    grammarFileName = "joi.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'.'", "'{'", 
                     "'}'", "'='", "'['", "']'", "'int'", "'bool'", "'float'", 
                     "'char'", "'str'", "'constant'", "'void'", "'joi'", 
                     "'return'", "'#include'", "'<iostream>'", "'using'", 
                     "'namespace'", "'std'", "'cout'", "'cin'", "'endl'", 
                     "'<<'", "'>>'", "'if'", "'else'", "'switch'", "'case'", 
                     "'default'", "'break'", "'continue'", "'while'", "'do'", 
                     "'for'", "'true'", "'false'", "'struct'", "'enum'", 
                     "'private'", "'public'", "'protected'", "'class'", 
                     "'virtual'", "'new'", "'delete'", "'try'", "'catch'", 
                     "'throw'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "':'", "'&'", "'$'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "BOOL", 
                      "FLOAT", "CHAR", "STR", "CONST", "VOID", "MAIN", "RETURN", 
                      "INCLUDE", "IOSTREAM", "USING", "NAMESPACE", "STD", 
                      "COUT", "CIN", "ENDL", "LT", "GT", "IF", "ELSE", "SWITCH", 
                      "CASE", "DEFAULT", "BREAK", "CONTINUE", "WHILE", "DO", 
                      "FOR", "TRUE", "FALSE", "STRUCT", "ENUM", "PRIVATE", 
                      "PUBLIC", "PROTECTED", "CLASS", "VIRTUAL", "NEW", 
                      "DELETE", "TRY", "CATCH", "THROW", "EQ", "NEQ", "GT_OP", 
                      "LT_OP", "GTE", "LTE", "AND", "OR", "NOT", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "INC", "DEC", "PLUS_ASSIGN", 
                      "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "COLON", "AMPERSAND", "DOLLAR", "COMMENT", "IDENTIFIER", 
                      "CHAR_LITERAL", "STRING", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_includeStmt = 1
    RULE_usingStmt = 2
    RULE_functionDefOrStructDefOrEnumDef = 3
    RULE_functionDef = 4
    RULE_classDef = 5
    RULE_constructor = 6
    RULE_paramList = 7
    RULE_param = 8
    RULE_functionCall = 9
    RULE_argList = 10
    RULE_mainFunction = 11
    RULE_statements = 12
    RULE_statement = 13
    RULE_deleteStmt = 14
    RULE_structDef = 15
    RULE_enumDef = 16
    RULE_breakStmt = 17
    RULE_continueStmt = 18
    RULE_printStmt = 19
    RULE_printExpressionList = 20
    RULE_inputStmt = 21
    RULE_assignStmt = 22
    RULE_structAssignStmt = 23
    RULE_structAccessStmt = 24
    RULE_objectDeclarationStmt = 25
    RULE_classFunctionAccessStmt = 26
    RULE_returnStmt = 27
    RULE_declarationStmt = 28
    RULE_arrayDeclarationStmt = 29
    RULE_arrayValueAssigning = 30
    RULE_referenceDeclarationStmt = 31
    RULE_constDeclarationStmt = 32
    RULE_varList = 33
    RULE_var = 34
    RULE_tryCatchStmt = 35
    RULE_catchBlock = 36
    RULE_throwStmt = 37
    RULE_ifStmt = 38
    RULE_elseIfStmt = 39
    RULE_elseStmt = 40
    RULE_switchStmt = 41
    RULE_caseStmt = 42
    RULE_defaultStmt = 43
    RULE_whileStmt = 44
    RULE_doWhileStmt = 45
    RULE_forStmt = 46
    RULE_forInit = 47
    RULE_forUpdate = 48
    RULE_accessSpecifier = 49
    RULE_expression = 50
    RULE_typecastExpr = 51
    RULE_logicalOrExpression = 52
    RULE_logicalAndExpression = 53
    RULE_rel_expr = 54
    RULE_expr = 55
    RULE_term = 56
    RULE_factor = 57
    RULE_idOrPointerOrAddrId = 58
    RULE_pointer = 59
    RULE_address_identifier = 60
    RULE_condition = 61
    RULE_arithmeticOp = 62
    RULE_assignOp = 63
    RULE_comparisonOp = 64
    RULE_logicalOp = 65
    RULE_dataType = 66
    RULE_referenceDataType = 67
    RULE_main = 68

    ruleNames =  [ "program", "includeStmt", "usingStmt", "functionDefOrStructDefOrEnumDef", 
                   "functionDef", "classDef", "constructor", "paramList", 
                   "param", "functionCall", "argList", "mainFunction", "statements", 
                   "statement", "deleteStmt", "structDef", "enumDef", "breakStmt", 
                   "continueStmt", "printStmt", "printExpressionList", "inputStmt", 
                   "assignStmt", "structAssignStmt", "structAccessStmt", 
                   "objectDeclarationStmt", "classFunctionAccessStmt", "returnStmt", 
                   "declarationStmt", "arrayDeclarationStmt", "arrayValueAssigning", 
                   "referenceDeclarationStmt", "constDeclarationStmt", "varList", 
                   "var", "tryCatchStmt", "catchBlock", "throwStmt", "ifStmt", 
                   "elseIfStmt", "elseStmt", "switchStmt", "caseStmt", "defaultStmt", 
                   "whileStmt", "doWhileStmt", "forStmt", "forInit", "forUpdate", 
                   "accessSpecifier", "expression", "typecastExpr", "logicalOrExpression", 
                   "logicalAndExpression", "rel_expr", "expr", "term", "factor", 
                   "idOrPointerOrAddrId", "pointer", "address_identifier", 
                   "condition", "arithmeticOp", "assignOp", "comparisonOp", 
                   "logicalOp", "dataType", "referenceDataType", "main" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    INT=11
    BOOL=12
    FLOAT=13
    CHAR=14
    STR=15
    CONST=16
    VOID=17
    MAIN=18
    RETURN=19
    INCLUDE=20
    IOSTREAM=21
    USING=22
    NAMESPACE=23
    STD=24
    COUT=25
    CIN=26
    ENDL=27
    LT=28
    GT=29
    IF=30
    ELSE=31
    SWITCH=32
    CASE=33
    DEFAULT=34
    BREAK=35
    CONTINUE=36
    WHILE=37
    DO=38
    FOR=39
    TRUE=40
    FALSE=41
    STRUCT=42
    ENUM=43
    PRIVATE=44
    PUBLIC=45
    PROTECTED=46
    CLASS=47
    VIRTUAL=48
    NEW=49
    DELETE=50
    TRY=51
    CATCH=52
    THROW=53
    EQ=54
    NEQ=55
    GT_OP=56
    LT_OP=57
    GTE=58
    LTE=59
    AND=60
    OR=61
    NOT=62
    ADD=63
    SUB=64
    MUL=65
    DIV=66
    MOD=67
    INC=68
    DEC=69
    PLUS_ASSIGN=70
    MINUS_ASSIGN=71
    MUL_ASSIGN=72
    DIV_ASSIGN=73
    MOD_ASSIGN=74
    COLON=75
    AMPERSAND=76
    DOLLAR=77
    COMMENT=78
    IDENTIFIER=79
    CHAR_LITERAL=80
    STRING=81
    NUMBER=82
    WS=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeStmt(self):
            return self.getTypedRuleContext(joiParser.IncludeStmtContext,0)


        def usingStmt(self):
            return self.getTypedRuleContext(joiParser.UsingStmtContext,0)


        def mainFunction(self):
            return self.getTypedRuleContext(joiParser.MainFunctionContext,0)


        def EOF(self):
            return self.getToken(joiParser.EOF, 0)

        def functionDefOrStructDefOrEnumDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.FunctionDefOrStructDefOrEnumDefContext)
            else:
                return self.getTypedRuleContext(joiParser.FunctionDefOrStructDefOrEnumDefContext,i)


        def declarationStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.DeclarationStmtContext)
            else:
                return self.getTypedRuleContext(joiParser.DeclarationStmtContext,i)


        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(joiParser.ClassDefContext,i)


        def constDeclarationStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.ConstDeclarationStmtContext)
            else:
                return self.getTypedRuleContext(joiParser.ConstDeclarationStmtContext,i)


        def getRuleIndex(self):
            return joiParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = joiParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.includeStmt()
            self.state = 139
            self.usingStmt()
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 144
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 140
                        self.functionDefOrStructDefOrEnumDef()
                        pass

                    elif la_ == 2:
                        self.state = 141
                        self.declarationStmt()
                        pass

                    elif la_ == 3:
                        self.state = 142
                        self.classDef()
                        pass

                    elif la_ == 4:
                        self.state = 143
                        self.constDeclarationStmt()
                        pass

             
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 149
            self.mainFunction()
            self.state = 150
            self.match(joiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(joiParser.INCLUDE, 0)

        def IOSTREAM(self):
            return self.getToken(joiParser.IOSTREAM, 0)

        def getRuleIndex(self):
            return joiParser.RULE_includeStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStmt" ):
                listener.enterIncludeStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStmt" ):
                listener.exitIncludeStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeStmt" ):
                return visitor.visitIncludeStmt(self)
            else:
                return visitor.visitChildren(self)




    def includeStmt(self):

        localctx = joiParser.IncludeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_includeStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(joiParser.INCLUDE)
            self.state = 153
            self.match(joiParser.IOSTREAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(joiParser.USING, 0)

        def NAMESPACE(self):
            return self.getToken(joiParser.NAMESPACE, 0)

        def STD(self):
            return self.getToken(joiParser.STD, 0)

        def getRuleIndex(self):
            return joiParser.RULE_usingStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingStmt" ):
                listener.enterUsingStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingStmt" ):
                listener.exitUsingStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingStmt" ):
                return visitor.visitUsingStmt(self)
            else:
                return visitor.visitChildren(self)




    def usingStmt(self):

        localctx = joiParser.UsingStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_usingStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(joiParser.USING)
            self.state = 156
            self.match(joiParser.NAMESPACE)
            self.state = 157
            self.match(joiParser.STD)
            self.state = 158
            self.match(joiParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefOrStructDefOrEnumDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(joiParser.FunctionDefContext,0)


        def structDef(self):
            return self.getTypedRuleContext(joiParser.StructDefContext,0)


        def enumDef(self):
            return self.getTypedRuleContext(joiParser.EnumDefContext,0)


        def getRuleIndex(self):
            return joiParser.RULE_functionDefOrStructDefOrEnumDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefOrStructDefOrEnumDef" ):
                listener.enterFunctionDefOrStructDefOrEnumDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefOrStructDefOrEnumDef" ):
                listener.exitFunctionDefOrStructDefOrEnumDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefOrStructDefOrEnumDef" ):
                return visitor.visitFunctionDefOrStructDefOrEnumDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDefOrStructDefOrEnumDef(self):

        localctx = joiParser.FunctionDefOrStructDefOrEnumDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDefOrStructDefOrEnumDef)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13, 14, 15, 17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.functionDef()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.structDef()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.enumDef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(joiParser.IDENTIFIER, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(joiParser.COLON)
            else:
                return self.getToken(joiParser.COLON, i)

        def statements(self):
            return self.getTypedRuleContext(joiParser.StatementsContext,0)


        def dataType(self):
            return self.getTypedRuleContext(joiParser.DataTypeContext,0)


        def VOID(self):
            return self.getToken(joiParser.VOID, 0)

        def paramList(self):
            return self.getTypedRuleContext(joiParser.ParamListContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(joiParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return joiParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = joiParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13, 14, 15]:
                self.state = 165
                self.dataType()
                pass
            elif token in [17]:
                self.state = 166
                self.match(joiParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 169
            self.match(joiParser.IDENTIFIER)
            self.state = 170
            self.match(joiParser.T__1)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0):
                self.state = 171
                self.paramList()


            self.state = 174
            self.match(joiParser.T__2)
            self.state = 175
            self.match(joiParser.COLON)
            self.state = 176
            self.statements()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 177
                self.returnStmt()


            self.state = 180
            self.match(joiParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(joiParser.CLASS, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(joiParser.IDENTIFIER)
            else:
                return self.getToken(joiParser.IDENTIFIER, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(joiParser.COLON)
            else:
                return self.getToken(joiParser.COLON, i)

        def PUBLIC(self, i:int=None):
            if i is None:
                return self.getTokens(joiParser.PUBLIC)
            else:
                return self.getToken(joiParser.PUBLIC, i)

        def accessSpecifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.AccessSpecifierContext)
            else:
                return self.getTypedRuleContext(joiParser.AccessSpecifierContext,i)


        def declarationStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.DeclarationStmtContext)
            else:
                return self.getTypedRuleContext(joiParser.DeclarationStmtContext,i)


        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(joiParser.FunctionDefContext,i)


        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(joiParser.ConstructorContext)
            else:
                return self.getTypedRuleContext(joiParser.ConstructorContext,i)


        def getRuleIndex(self):
            return joiParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDef" ):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)




    def classDef(self):

        localctx = joiParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(joiParser.CLASS)
            self.state = 183
            self.match(joiParser.IDENTIFIER)
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 184
                self.match(joiParser.COLON)
                self.state = 185
                self.match(joiParser.PUBLIC)
                self.state = 186
                self.match(joiParser.IDENTIFIER)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 187
                    self.match(joiParser.T__3)
                    self.state = 188
                    self.match(joiParser.PUBLIC)
                    self.state = 189
                    self.match(joiParser.IDENTIFIER)
                    self.state = 194
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 197
            self.match(joiParser.COLON)
            self.state = 210
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 123145302310912) != 0):
                self.state = 198
                self.accessSpecifier()
                self.state = 199
                self.match(joiParser.COLON)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 194560) != 0) or _la==79:
                    self.state = 203
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        self.state = 200
                        self.declarationStmt()
                        pass

                    elif la_ == 2:
                        self.state = 201
                        self.functionDef()
                        pass

                    elif la_ == 3:
                        self.state = 202
                        self.constructor()
                        pass


                    self.state = 207
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 212
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 213
            self.match(joiParser.COLON)
            self.state = 214
            self.match(joiParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(joiParser.IDENTIFIER, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(joiParser.COLON)
            else:
                return self.getToken(joiParser.COLON, i)

        def statements(self):
            return self.getTypedRuleContext(joiParser.StatementsContext,0)


